--- a/Pipfile
+++ b/Pipfile
@@ -36,7 +36,6 @@ django-appconf = "==1.0.5"
 django-compressor = "==4.3.1"
 django-cors-headers = "==3.7.0"
 django-crispy-forms = "==1.11.1"
-django-dotenv = "==1.4.2"
 django-encrypted-model-fields = "==0.6.5"
 django-environ = "==0.4.5"
 django-filter = "==2.4.0"
@@ -52,6 +51,8 @@ django-redis = "==5.2.0"
 djangorestframework = "==3.15.1"
 django-celery-beat = "==2.3.0"
 django-celery-results = "==2.4.0"
+drf-spectacular = "==0.25.1"
+drf-spectacular-sidecar = "==2022.12.1"
 drf-extra-fields = "==3.4.0"
 drf-yasg = "==1.21.7"
 et-xmlfile = "==1.1.0"
@@ -132,7 +133,7 @@ xlrd = "==2.0.1"
 xlwt = "==1.3.0"
 zipp = "==3.4.1"
 "zope.interface" = "==5.4.0"
-psycopg2 = "==2.9.10"
+psycopg2-binary = "==2.9.10"
 
 [dev-packages]
 
