--- a/fly.toml
+++ b/fly.toml
@@ -1,25 +1,35 @@
+# fly.toml app configuration file generated for igameserver on 2025-07-03T12:15:34+01:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = 'igameserver'
 primary_region = 'jnb'
 console_command = '/code/manage.py shell'
 
 [build]
+  dockerfile = "Dockerfile"
+
+[env]
+  PORT = '8000'
 
 [processes]
   app = 'daphne igame.asgi:application --port 8000 --bind 0.0.0.0 -v2'
   release = 'python3 manage.py migrate'
+  # celery = 'celery -A igame worker --loglevel=INFO'
 
 [http_service]
   internal_port = 8000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 4
+  min_machines_running = 2
   processes = ['app']
 
 [[vm]]
   memory = '2gb'
   cpu_kind = 'shared'
-  cpus = 1
+  cpus = 2
 
 [[statics]]
   guest_path = '/code/static'
